--- a/app/views/shapes/thirds.html.erb
+++ b/app/views/shapes/thirds.html.erb
@@ -133,9 +133,12 @@
       $( ".one" ).css('border',+((mouse_one/100)*100)+"px dashed black");
       $( ".two" ).css('border',+((mouse_two/100)*100)+"px dashed black");
       $( ".three" ).css('border',+((mouse_three/100)*100)+"px dashed black");
-      $( ".one" ).css('font-size',+((mouse_one/100)*200)+"px");
-      $( ".two" ).css('font-size',+((mouse_two/100)*200)+"px");
-      $( ".three" ).css('font-size',+((mouse_three/100)*200)+"px");
+      $( ".one" ).css('font-size',+((mouse_one/100)*7)+"em");
+      $( ".two" ).css('font-size',+((mouse_two/100)*7)+"em");
+      $( ".three" ).css('font-size',+((mouse_three/100)*7)+"em");
+      $( ".one" ).css('letter-spacing',+((mouse_one/100)*1.2)+"em");
+      $( ".two" ).css('letter-spacing',+((mouse_two/100)*1.2)+"em");
+      $( ".three" ).css('letter-spacing',+((mouse_three/100)*1.2)+"em");
     });
 
     </script>
