--- a/app/views/shapes/thirds.html.erb
+++ b/app/views/shapes/thirds.html.erb
@@ -97,7 +97,7 @@
           <h1>Found</h1>
           </div>
           <div class="three">
-          <h1>It</h1>
+          <h1>Out</h1>
           </div>
       </div>
     </body>
