--- a/app/views/shapes/jquery.html.erb
+++ b/app/views/shapes/jquery.html.erb
@@ -17,6 +17,10 @@
 	font-size: 50px;
 	height: 700px;
 }
+.innerbox {
+	font-size: 50px;
+	height: 700px;
+}
 .form {
 	font-family: 'Open Sans', sans-serif;
 	position: relative;
